# groupfind

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.prod.yml  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 3c85a7fcb00a_timestamp_ms_to_bigint.py  7169a1fadba8_initial_schema.py  809b2bd61899_add_activities_table.py  ad2d7046bcf1_add_itinerary_tables.py
backend/src/: celery_app.py  config.py  database.py  dependencies.py  main.py
backend/src/api/: router.py
backend/src/api/chats/: router.py
backend/src/api/jobs/: router.py  schemas.py  service.py
backend/src/api/results/: router.py
backend/src/api/upload/: router.py
backend/src/middleware/: rate_limiter.py  sanitizer.py
backend/src/models/: activity.py  base.py  event.py  itinerary.py  job.py  message.py  reddit_verification.py  reel.py  session.py
backend/src/pipeline/: orchestrator.py  runner.py
backend/src/pipeline/tasks/: classify_events.py  cleanup_sessions.py  extract_reels.py  generate_itinerary.py  parse_zip.py  process_activities.py  search_reddit.py
backend/src/pipeline/utils/: activity_extractor.py  entity_extractor.py  geocoder.py  instagram_parser.py  itinerary_generator.py  llm_client.py  reddit_searcher.py  reel_fetcher.py  review_searcher.py  url_generator.py
backend/src/repositories/: base.py  job_repository.py  session_repository.py
backend/tests/unit/: test_instagram_parser.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+22 files in other folders)
